# collaborative-manipulation

./: .gitignore  DESIGN.md  IMPLEMENTATION.md  PLAN.md  README.md  REFERENCES.md  cam.py  prompt.md  pyproject.toml  scratch.txt
calibration/robots/so_follower/: ferb.json  phineas.json
calibration/teleoperators/so_leader/: ferb_leader.json  phineas_leader.json
configs/: robot.yaml
model/: dataset.py  diffusion_dataset.py  diffusion_model.py  tokenizer.py  vlm_encoder.py
models/: example_inference.py  example_sft.py
scripts/: augment_episodes.py  client.py  dataloader.py  find_camera.py  inference.py  inference_diffusion.py  merge_lerobot_bimanual.py  mock_client.py  record.py  server.py  tokenize_actions.py  train.py  train_diffusion.py  visualize_lerobot_v3.py
tools/: find_camera.py  visualize.py  visualize_cot.py
