[project]
name = "collaborative-manipulation"
version = "0.1.0"
description = "uv-based environment for LeRobot SO-100 workflows"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
  "feetech-servo-sdk>=1.0.0",
  "lerobot @ git+https://github.com/huggingface/lerobot.git",
]

[tool.uv]
default-groups = []
